--- a/package.json
+++ b/package.json
@@ -4,6 +4,32 @@
   "description": "Provider agnostic payments SDK for one-time payments, subscriptions, and webhooks.",
   "license": "MIT",
   "author": "PayLayer",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ajagatobby/paylayer-core.git"
+  },
+  "homepage": "https://github.com/ajagatobby/paylayer-core#readme",
+  "keywords": [
+    "payments",
+    "payment",
+    "stripe",
+    "paypal",
+    "paddle",
+    "lemonsqueezy",
+    "polar",
+    "billing",
+    "subscription",
+    "webhook",
+    "checkout",
+    "payment-gateway",
+    "payment-provider",
+    "payment-sdk",
+    "paylayer",
+    "unified-payments",
+    "provider-agnostic",
+    "typescript",
+    "nodejs"
+  ],
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
